--- a/.github/workflows/beepsky.yml
+++ b/.github/workflows/beepsky.yml
@@ -144,82 +144,79 @@ jobs:
         run: |
           tools/ci/dm.sh -DTRAVISBUILDING -DTRAVIS_ASSJAM goonstation.dme
 
-  # compile_full:
-  #   name: "Compile and Lint with Secret Submodule"
-  #   runs-on: ubuntu-18.04
-  #   if: |
-  #     ((github.event_name == 'push' && github.repository == 'goonstation/goonstation') || (github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == 'goonstation/goonstation')) && !contains(github.event.head_commit.message, 'skip ci')
-  #   steps:
-  #     - uses: actions/checkout@v2
+  compile_full:
+    name: "Compile and Lint with Secret Submodule"
+    runs-on: ubuntu-18.04
+    if: |
+      ((github.event_name == 'push' && github.repository == 'goonstation/goonstation') || (github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == 'goonstation/goonstation')) && !contains(github.event.head_commit.message, 'skip ci')
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
+          token: '${{ secrets.ROBUDDY_PAT }}'
 
-  #     - name: Install Dependencies
-  #       run: |
-  #         curl https://raw.githubusercontent.com/goonstation/goonstation/master/tools/ci/sources.list | sudo tee /etc/apt/sources.list
-  #         sudo dpkg --add-architecture i386
-  #         sudo apt-get update
-  #         sudo apt install libstdc++6:i386
+      - name: Install Dependencies
+        run: |
+          curl https://raw.githubusercontent.com/goonstation/goonstation/master/tools/ci/sources.list | sudo tee /etc/apt/sources.list
+          sudo dpkg --add-architecture i386
+          sudo apt-get update
+          sudo apt install libstdc++6:i386
 
-  #     - name: Cache BYOND
-  #       uses: actions/cache@v1
-  #       with:
-  #         path: ~/BYOND
-  #         key: ${{ runner.os }}-byond-${{ hashFiles('buildByond.conf')}}
-  #         restore-keys: ${{ runner.os }}-byond
+      - name: Cache BYOND
+        uses: actions/cache@v1
+        with:
+          path: ~/BYOND
+          key: ${{ runner.os }}-byond-${{ hashFiles('buildByond.conf')}}
+          restore-keys: ${{ runner.os }}-byond
 
-  #     - name: Setup BYOND
-  #       run: |
-  #         tools/ci/install_byond.sh
-  #         cd $GITHUB_WORKSPACE
-  #         printenv
-  #         echo "::set-env name=BYOND_SYSTEM::/home/runner/BYOND/byond"
-  #         echo "::set-env name=PATH::/home/runner/BYOND/byond/bin:$PATH"
-  #         echo "::set-env name=LD_LIBRARY_PATH::/home/runner/BYOND/byond/bin:$LD_LIBRARY_PATH"
-  #         echo "::set-env name=MANPATH::/home/runner/BYOND/byond/man:$MANPATH"
+      - name: Setup BYOND
+        run: |
+          tools/ci/install_byond.sh
+          cd $GITHUB_WORKSPACE
+          printenv
+          echo "::set-env name=BYOND_SYSTEM::/home/runner/BYOND/byond"
+          echo "::set-env name=PATH::/home/runner/BYOND/byond/bin:$PATH"
+          echo "::set-env name=LD_LIBRARY_PATH::/home/runner/BYOND/byond/bin:$LD_LIBRARY_PATH"
+          echo "::set-env name=MANPATH::/home/runner/BYOND/byond/man:$MANPATH"
 
-  #     - name: Set up Submodule
-  #       run: tools/ci/setup_submodule.sh
-  #       env:
-  #         secret_iv: ${{ secrets.SECRET_REPO_IV }}
-  #         secret_key: ${{ secrets.SECRET_REPO_KEY }}
+      - name: Cache SpacemanDMM
+        uses: actions/cache@v1
+        with:
+          path: ~/SpacemanDMM
+          key: ${{ runner.os }}-dreamchecker-${{ hashFiles('buildByond.conf')}}
+          restore-keys: ${{ runner.os }}-dreamchecker
 
-  #     - name: Cache SpacemanDMM
-  #       uses: actions/cache@v1
-  #       with:
-  #         path: ~/SpacemanDMM
-  #         key: ${{ runner.os }}-dreamchecker-${{ hashFiles('buildByond.conf')}}
-  #         restore-keys: ${{ runner.os }}-dreamchecker
+      - name: Setup Python
+        uses: actions/setup-python@v2
 
-  #     - name: Setup Python
-  #       uses: actions/setup-python@v2
+      - name: Setup Rust
+        uses: hecrj/setup-rust-action@v1
 
-  #     - name: Setup Rust
-  #       uses: hecrj/setup-rust-action@v1
+      - name: Install Dependencies
+        run: |
+          tools/ci/install_spaceman_dmm.sh dreamchecker
+          touch +secret/__secret.dme
 
-  #     - name: Install Dependencies
-  #       run: |
-  #         tools/ci/install_spaceman_dmm.sh dreamchecker
-  #         touch +secret/__secret.dme
+      - name: Misc Checks
+        run: |
+          tools/ci/check_filedirs.sh goonstation.dme
+          tools/ci/check_grep.sh
 
-  #     - name: Misc Checks
-  #       run: |
-  #         tools/ci/check_filedirs.sh goonstation.dme
-  #         tools/ci/check_grep.sh
+      - name: Run Linter
+        run: |
+          ~/dreamchecker > ${GITHUB_WORKSPACE}/output-annotations.txt 2>&1
 
-  #     - name: Run Linter
-  #       run: |
-  #         ~/dreamchecker > ${GITHUB_WORKSPACE}/output-annotations.txt 2>&1
+      - name: Compile
+        run: |
+          tools/ci/dm.sh -DTRAVISBUILDING -DTRAVIS_SUB goonstation.dme > ${GITHUB_WORKSPACE}/output-annotations.txt 2>&1
 
-  #     - name: Compile
-  #       run: |
-  #         tools/ci/dm.sh -DTRAVISBUILDING -DTRAVIS_SUB goonstation.dme > ${GITHUB_WORKSPACE}/output-annotations.txt 2>&1
-
-  #     - name: Annotate Errors
-  #       uses: zewaka/add-annotations-github-action@master
-  #       with:
-  #         check_name: "Run Linters"
-  #         linter_output_path: 'output-annotations.txt'
-  #         commit_sha: ${{ github.sha }}
-  #         regex: '(?<filename>.*?), line (?<lineNumber>\d+), column (?<columnNumber>\d+):\n(?<errorCode>\w+): (?<errorDesc>.*)'
-  #       if: always()
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Annotate Errors
+        uses: zewaka/add-annotations-github-action@master
+        with:
+          check_name: "Run Linters"
+          linter_output_path: 'output-annotations.txt'
+          commit_sha: ${{ github.sha }}
+          regex: '(?<filename>.*?), line (?<lineNumber>\d+), column (?<columnNumber>\d+):\n(?<errorCode>\w+): (?<errorDesc>.*)'
+        if: always()
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
