linter for linter

--- a/.github/workflows/beepsky.yml
+++ b/.github/workflows/beepsky.yml
@@ -43,18 +43,13 @@ jobs:
 
       - name: Run Linter
         run: |
-          ~/dreamchecker
+          ~/dreamchecker > ${GITHUB_WORKSPACE}/output-annotations.txt 2>&1
 
-#       - name: Annotate Errors
-#         uses: yogstation13/add-annotations-github-action@master
-#         with:
-#           check_name: "Run Linters"
-#           linter_output_path: 'output-annotations.txt'
-#           commit_sha: ${{ github.sha }}
-#           regex: '(?<filename>.*?), line (?<lineNumber>\d+), column (?<columnNumber>\d+):\n(?<errorCode>\w+): (?<errorDesc>.*)'
-#         if: always()
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Annotate Linter
+        uses: yogstation13/DreamAnnotate@34029606cd7c22a08a589e084f860c1cc287363c # v1 - security concerns and all that shit
+        if: always()
+        with:
+          outputFile: output-annotations.txt
 
   compile:
     name: Compile
