--- a/.github/workflows/beepsky.yml
+++ b/.github/workflows/beepsky.yml
@@ -44,7 +44,8 @@ jobs:
       - name: Run Linter
         id: linter
         run: |
-          ~/dreamchecker > ${GITHUB_WORKSPACE}/output-annotations.txt 2>&1
+          ~/dreamchecker > ${GITHUB_WORKSPACE}/output-annotations.txt 2>&1 | tee errors.log
+          cat errors.log
 
       - name: Annotate Linter
         uses: yogstation13/DreamAnnotate@34029606cd7c22a08a589e084f860c1cc287363c # v1 - security concerns and all that shit
@@ -201,7 +202,8 @@ jobs:
       - name: Run Linter
         id: linter
         run: |
-          ~/dreamchecker > ${GITHUB_WORKSPACE}/output-annotations.txt 2>&1
+          ~/dreamchecker > ${GITHUB_WORKSPACE}/output-annotations.txt 2>&1 | tee errors.log
+          cat errors.log
 
       - name: Compile
         run: |
