--- a/.github/workflows/beepsky.yml
+++ b/.github/workflows/beepsky.yml
@@ -170,10 +170,10 @@ jobs:
           tools/ci/install_byond.sh
           cd $GITHUB_WORKSPACE
           printenv
-          echo "::set-env name=BYOND_SYSTEM::/home/runner/BYOND/byond"
-          echo "::set-env name=PATH::/home/runner/BYOND/byond/bin:$PATH"
-          echo "::set-env name=LD_LIBRARY_PATH::/home/runner/BYOND/byond/bin:$LD_LIBRARY_PATH"
-          echo "::set-env name=MANPATH::/home/runner/BYOND/byond/man:$MANPATH"
+          echo "BYOND_SYSTEM=/home/runner/BYOND/byond" >> $GITHUB_ENV
+          echo "/home/runner/BYOND/byond/bin:" >> $GITHUB_PATH
+          echo "LD_LIBRARY_PATH=/home/runner/BYOND/byond/bin:$LD_LIBRARY_PATH" >> $GITHUB_ENV
+          echo "MANPATH=/home/runner/BYOND/byond/man:$MANPATH" >> $GITHUB_ENV
 
       - name: Cache SpacemanDMM
         uses: actions/cache@v1
