--- a/.github/workflows/beepsky.yml
+++ b/.github/workflows/beepsky.yml
@@ -144,6 +144,10 @@ jobs:
     name: Runtime Checker
     runs-on: ubuntu-18.04
     if: "!contains(github.event.head_commit.message, 'skip ci')"
+    strategy:
+      matrix:
+        map: ["COGMAP", "COGMAP2", "CLARION", "DESTINY", "DONUT2", "DONUT3", "HORIZON", "LINEMAP", "MUSHROOM", "TRUNKMAP", "OSHAN", "SAMEDI", "PAMGOC", "KONDARU", "FLEET", "ICARUS", "DENSITY", "ATLAS", "MANTA", "WRESTLEMAP", "SPACE_PREFAB", "UNDERWATER_PREFAB", "FULL"]
+        compiletype: ["default", "ass"]
     steps:
       - uses: actions/checkout@v2
 
@@ -172,53 +176,38 @@ jobs:
           echo "MANPATH=/home/runner/BYOND/byond/man:$MANPATH" >> $GITHUB_ENV
           touch +secret/__secret.dme
 
-      - name: Setup rust-g
+      - name: Setup for assjam
+        if: "matrix.compiletype == 'ass'"
         run: |
-          tools/ci/install_rust_g.sh
-
-      - name: Compile and check maps for runtimes
-        uses: ./.github/actions/Runtime
-
-  runtime_ass:
-    name: "Runtime Checker for Ass Day"
-    runs-on: ubuntu-18.04
-    if: "!contains(github.event.head_commit.message, 'skip ci')"
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Install Dependencies
-        run: |
-          curl https://raw.githubusercontent.com/goonstation/goonstation/master/tools/ci/sources.list | sudo tee /etc/apt/sources.list
-          sudo dpkg --add-architecture i386
-          sudo apt-get update
-          sudo apt install libstdc++6:i386 libssl1.1:i386
-
-      - name: Cache BYOND
-        uses: actions/cache@v1
-        with:
-          path: ~/BYOND
-          key: ${{ runner.os }}-byond-${{ hashFiles('buildByond.conf')}}
-          restore-keys: ${{ runner.os }}-byond
-
-      # Ass Jam occurs on the 13th of the month.
-      - name: Setup BYOND
-        run: |
-          tools/ci/install_byond.sh
-          cd $GITHUB_WORKSPACE
-          printenv
-          echo "BYOND_SYSTEM=/home/runner/BYOND/byond" >> $GITHUB_ENV
-          echo "/home/runner/BYOND/byond/bin" >> $GITHUB_PATH
-          echo "LD_LIBRARY_PATH=/home/runner/BYOND/byond/bin:$LD_LIBRARY_PATH" >> $GITHUB_ENV
-          echo "MANPATH=/home/runner/BYOND/byond/man:$MANPATH" >> $GITHUB_ENV
-          touch +secret/__secret.dme
           sed -i 's/BUILD_TIME_DAY 01/BUILD_TIME_DAY 13/' _std/__build.dm
 
       - name: Setup rust-g
         run: |
           tools/ci/install_rust_g.sh
 
-      - name: Compile and check maps for runtimes
-        uses: ./.github/actions/Runtime
+      - name: Compile map
+        if: "matrix.map != 'SPACE_PREFAB' && matrix.map != 'UNDERWATER_PREFAB' && matrix.map != 'FULL'"
+        run: |
+          tools/ci/dm.sh -DTRAVISBUILDING -DMAP_OVERRIDE_${{ matrix.map}} -DRUNTIME_CHECKING -DIM_REALLY_IN_A_FUCKING_HURRY_HERE goonstation.dme
+
+      - name: Compile space prefabs
+        if: "matrix.map == 'SPACE_PREFAB'"
+        run: |
+          tools/ci/dm.sh -DTRAVISBUILDING -DSPACE_PREFAB_RUNTIME_CHECKING  -DIM_REALLY_IN_A_FUCKING_HURRY_HERE goonstation.dme
+
+      - name: Compile underwater prefabs
+        if: "matrix.map == 'UNDERWATER_PREFAB'"
+        run: |
+          tools/ci/dm.sh -DTRAVISBUILDING -DUNDERWATER_PREFAB_RUNTIME_CHECKING  -DIM_REALLY_IN_A_FUCKING_HURRY_HERE goonstation.dme
+
+      - name: Compile with full pre-round setup
+        if: "matrix.map == 'FULL'"
+        run: |
+          tools/ci/dm.sh -DTRAVISBUILDING -DRUNTIME_CHECKING goonstation.dme
+
+      - name: Run map and check for runtime errors
+        run: |
+          tools/ci/run_server.sh
 
   compile_full:
     name: "Compile and Lint with Secret Submodule"
@@ -298,6 +287,10 @@ jobs:
     runs-on: ubuntu-18.04
     if: |
       ((github.event_name == 'push' && github.repository == 'goonstation/goonstation') || (github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == 'goonstation/goonstation')) && !contains(github.event.head_commit.message, 'skip ci')
+    strategy:
+      matrix:
+        map: ["COGMAP", "COGMAP2", "CLARION", "DESTINY", "DONUT2", "DONUT3", "HORIZON", "LINEMAP", "MUSHROOM", "TRUNKMAP", "OSHAN", "SAMEDI", "PAMGOC", "KONDARU", "FLEET", "ICARUS", "DENSITY", "ATLAS", "MANTA", "WRESTLEMAP", "SPACE_PREFAB", "UNDERWATER_PREFAB", "FULL"]
+        compiletype: ["default", "ass"]
     steps:
       - uses: actions/checkout@v2
         with:
@@ -327,14 +320,37 @@ jobs:
           echo "/home/runner/BYOND/byond/bin" >> $GITHUB_PATH
           echo "LD_LIBRARY_PATH=/home/runner/BYOND/byond/bin:$LD_LIBRARY_PATH" >> $GITHUB_ENV
           echo "MANPATH=/home/runner/BYOND/byond/man:$MANPATH" >> $GITHUB_ENV
+          touch +secret/__secret.dme
+
+      - name: Setup for assjam
+        if: "matrix.compiletype == 'ass'"
+        run: |
+          sed -i 's/BUILD_TIME_DAY 01/BUILD_TIME_DAY 13/' _std/__build.dm
 
       - name: Setup rust-g
         run: |
           tools/ci/install_rust_g.sh
 
-      - name: Install Dependencies
+      - name: Compile map
+        if: "matrix.map != 'SPACE_PREFAB' && matrix.map != 'UNDERWATER_PREFAB' && matrix.map != 'FULL'"
         run: |
-          touch +secret/__secret.dme
+          tools/ci/dm.sh -DTRAVISBUILDING -DMAP_OVERRIDE_${{ matrix.map}} -DRUNTIME_CHECKING -DIM_REALLY_IN_A_FUCKING_HURRY_HERE goonstation.dme
 
-      - name: Compile and check maps for runtimes
-        uses: ./.github/actions/Runtime
+      - name: Compile space prefabs
+        if: "matrix.map == 'SPACE_PREFAB'"
+        run: |
+          tools/ci/dm.sh -DTRAVISBUILDING -DSPACE_PREFAB_RUNTIME_CHECKING  -DIM_REALLY_IN_A_FUCKING_HURRY_HERE goonstation.dme
+
+      - name: Compile underwater prefabs
+        if: "matrix.map == 'UNDERWATER_PREFAB'"
+        run: |
+          tools/ci/dm.sh -DTRAVISBUILDING -DUNDERWATER_PREFAB_RUNTIME_CHECKING  -DIM_REALLY_IN_A_FUCKING_HURRY_HERE goonstation.dme
+
+      - name: Compile with full pre-round setup
+        if: "matrix.map == 'FULL'"
+        run: |
+          tools/ci/dm.sh -DTRAVISBUILDING -DRUNTIME_CHECKING goonstation.dme
+
+      - name: Run map and check for runtime errors
+        run: |
+          tools/ci/run_server.sh
