--- a/.github/workflows/beepsky.yml
+++ b/.github/workflows/beepsky.yml
@@ -64,7 +64,7 @@ jobs:
           curl https://raw.githubusercontent.com/goonstation/goonstation/master/tools/ci/sources.list | sudo tee /etc/apt/sources.list
           sudo dpkg --add-architecture i386
           sudo apt-get update
-          sudo apt install libstdc++6:i386 libssl1.1:i386
+          sudo apt install libstdc++6:i386
 
       - name: Cache BYOND
         uses: actions/cache@v1
@@ -113,7 +113,7 @@ jobs:
           curl https://raw.githubusercontent.com/goonstation/goonstation/master/tools/ci/sources.list | sudo tee /etc/apt/sources.list
           sudo dpkg --add-architecture i386
           sudo apt-get update
-          sudo apt install libstdc++6:i386 libssl1.1:i386
+          sudo apt install libstdc++6:i386
 
       - name: Cache BYOND
         uses: actions/cache@v1
@@ -140,7 +140,6 @@ jobs:
         run: |
           tools/ci/dm.sh -DTRAVISBUILDING -DTRAVIS_ASSJAM goonstation.dme
 
-
   compile_full:
     name: "Compile and Lint with Secret Submodule"
     runs-on: ubuntu-18.04
@@ -157,7 +156,7 @@ jobs:
           curl https://raw.githubusercontent.com/goonstation/goonstation/master/tools/ci/sources.list | sudo tee /etc/apt/sources.list
           sudo dpkg --add-architecture i386
           sudo apt-get update
-          sudo apt install libstdc++6:i386 libssl1.1:i386
+          sudo apt install libstdc++6:i386
 
       - name: Cache BYOND
         uses: actions/cache@v1
@@ -213,4 +212,3 @@ jobs:
         if: always()
         with:
           outputFile: output-annotations.txt
-
