--- a/.github/workflows/beepsky.yml
+++ b/.github/workflows/beepsky.yml
@@ -68,18 +68,18 @@ jobs:
         run: |
           ~/dreamchecker
 
-  odlint:
-    name: Lint with OpenDream
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v4
-      - uses: robinraju/release-downloader@v1.9
-        with:
-          repository: "OpenDreamProject/OpenDream"
-          tag: "latest"
-          fileName: "DMCompiler_linux-x64.tar.gz"
-          extract: true
-      - run: ./DMCompiler_linux-x64/DMCompiler --suppress-unimplemented goonstation.dme --version=515.1635
+  # odlint:
+  #   name: Lint with OpenDream
+  #   runs-on: ubuntu-22.04
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: robinraju/release-downloader@v1.9
+  #       with:
+  #         repository: "OpenDreamProject/OpenDream"
+  #         tag: "latest"
+  #         fileName: "DMCompiler_linux-x64.tar.gz"
+  #         extract: true
+  #     - run: ./DMCompiler_linux-x64/DMCompiler --suppress-unimplemented goonstation.dme --version=515.1635
 
   compile:
     name: Compile
