--- a/.github/workflows/beepsky.yml
+++ b/.github/workflows/beepsky.yml
@@ -23,7 +23,7 @@ jobs:
           key: ${{ runner.os }}-spacemandmm
 
       - name: Setup Rust
-        uses: hecrj/setup-rust-action@v2.0.0
+        uses: hecrj/setup-rust-action@v2.0.1
 
       - uses: actions/setup-node@v4
         with:
@@ -38,6 +38,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
+          touch +secret/__secret.dme
           pip3 install setuptools
           tools/ci/install_build_tools.sh
           tools/ci/install_spaceman_dmm.sh dreamchecker
@@ -73,7 +74,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
-      - uses: robinraju/release-downloader@v1.9
+      - uses: robinraju/release-downloader@v1.11
         with:
           repository: "OpenDreamProject/OpenDream"
           tag: "latest"
@@ -91,7 +92,7 @@ jobs:
       - name: Cache BYOND
         uses: actions/cache@v4
         with:
-          path: $HOME/BYOND
+          path: /home/runner/BYOND
           key: ${{ runner.os }}-byond
 
       - name: Setup BYOND
@@ -134,7 +135,7 @@ jobs:
       - name: Cache BYOND
         uses: actions/cache@v4
         with:
-          path: $HOME/BYOND
+          path: /home/runner/BYOND
           key: ${{ runner.os }}-byond
 
       - name: Setup BYOND
@@ -154,7 +155,7 @@ jobs:
           key: ${{ runner.os }}-spacemandmm
 
       - name: Setup Rust
-        uses: hecrj/setup-rust-action@v2.0.0
+        uses: hecrj/setup-rust-action@v2.0.1
 
       - uses: actions/setup-node@v4
         with:
