--- a/.github/workflows/automaton.yml
+++ b/.github/workflows/automaton.yml
@@ -48,6 +48,7 @@ jobs:
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
           packages: libssl-dev:i386 libgcc-s1:i386
+          version: 1.0
 
       - name: Cache BYOND
         uses: actions/cache@v4
@@ -145,6 +146,7 @@ jobs:
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
           packages: libssl-dev:i386 libgcc-s1:i386
+          version: 1.0
 
       - name: Cache BYOND
         uses: actions/cache@v4
@@ -213,6 +215,7 @@ jobs:
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
           packages: libssl-dev:i386 libgcc-s1:i386
+          version: 1.0
 
       - name: Cache BYOND
         uses: actions/cache@v4
