--- a/tgui/package.json
+++ b/tgui/package.json
@@ -11,15 +11,15 @@
     "tgui:bench": "webpack --env TGUI_BENCH=1 && node packages/tgui-bench/index.js",
     "tgui:build": "BROWSERSLIST_IGNORE_OLD_DATA=true webpack",
     "tgui:dev": "node --experimental-modules packages/tgui-dev-server/index.js",
-    "tgui:lint": "eslint packages --ext .js,.cjs,.ts,.tsx",
-    "tgui:prettier": "prettier --check .",
+    "tgui:eslint": "eslint --fix packages --ext .js,.cjs,.ts,.tsx",
+    "tgui:eslint-nofix": "eslint packages --ext .js,.cjs,.ts,.tsx",
+    "tgui:prettier": "prettier --write .",
+    "tgui:prettier-nofix": "prettier --check .",
     "tgui:sonar": "eslint packages -c .eslintrc-sonar.yml",
     "tgui:test": "jest --watch",
     "tgui:test-simple": "CI=true jest --color",
     "tgui:test-ci": "CI=true jest --color --collect-coverage",
-    "tgui:tsc": "tsc",
-    "tgui:prettier-fix": "prettier --write .",
-    "tgui:eslint-fix": "eslint --fix packages --ext .js,.cjs,.ts,.tsx"
+    "tgui:tsc": "tsc"
   },
   "dependencies": {
     "@swc/core": "^1.4.11",
