--- a/tgui/packages/tgui-panel/package.json
+++ b/tgui/packages/tgui-panel/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tgui": "workspace:*",
+    "tgui-core": "^1.1.18",
     "tgui-dev-server": "workspace:*",
     "tgui-polyfill": "workspace:*"
   }
