--- a/tgui/packages/tgui-bench/package.json
+++ b/tgui/packages/tgui-bench/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@fastify/static": "^6.12.0",
     "common": "workspace:*",
-    "fastify": "^3.29.5",
+    "fastify": "^4.28.1",
     "lodash": "^4.17.21",
     "platform": "^1.3.6",
     "react": "^18.2.0",
-    "tgui": "workspace:*"
+    "react-dom": "^18.2.0",
+    "tgui": "workspace:*",
+    "tgui-core": "^1.1.21"
   }
 }
