--- a/tgui/packages/tgui-say/package.json
+++ b/tgui/packages/tgui-say/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tgui": "workspace:*",
+    "tgui-core": "^1.1.21",
     "tgui-polyfill": "workspace:*"
   }
 }
