--- a/tgui/packages/tgui/package.json
+++ b/tgui/packages/tgui/package.json
@@ -8,6 +8,7 @@
     "@types/react": "^18.2.74",
     "common": "workspace:*",
     "dateformat": "^4.6.3",
+    "dayjs": "1.11.12",
     "dompurify": "^2.4.9",
     "highlight.js": "^11.9.0",
     "jest": "^29.7.0",
