stop the endless prettier unchanged spam

--- a/tgui/package.json
+++ b/tgui/package.json
@@ -13,8 +13,8 @@
     "tgui:dev": "node --experimental-modules packages/tgui-dev-server/index.js",
     "tgui:eslint": "eslint --fix packages --ext .js,.cjs,.ts,.tsx",
     "tgui:eslint-nofix": "eslint packages --ext .js,.cjs,.ts,.tsx",
-    "tgui:prettier": "prettier --write .",
-    "tgui:prettier-nofix": "prettier --check .",
+    "tgui:prettier": "prettier --log-level warn --write .",
+    "tgui:prettier-nofix": "prettier --log-level warn --check .",
     "tgui:sonar": "eslint packages -c .eslintrc-sonar.yml",
     "tgui:test": "jest --watch",
     "tgui:test-simple": "CI=true jest --color",
